<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="28dp"
    android:background="@drawable/bg_gradiente"
    tools:context=".LoginActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="16dp" />

    <!-- Boas-vindas -->
    <TextView
        android:id="@+id/textBemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Android_nome"
        android:textColor="#222222"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="36dp" />

    <!-- Campo de e-mail -->
    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:autofillHints=""
        android:hint="@string/Email"
        android:textColorHint="#444444"
        android:textColor="#111111"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_borda_top"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_marginBottom="18dp" />

    <!-- Campo de senha -->
    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:autofillHints=""
        android:hint="@string/Senha"
        android:textColorHint="#444444"
        android:textColor="#111111"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_borda_top"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_marginBottom="18dp" />

    <!-- Checkbox de consentimento -->
    <CheckBox
        android:id="@+id/checkBoxConsentimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autorizo_o_uso_dos_meus_dados_apenas_para_registro_e_gerenciamento_de_tickets"
        android:textColor="#111111"
        android:buttonTint="#2196F3"
        android:layout_marginBottom="20dp"/>

    <!-- Botão de login -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/entrar"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/btn_login_gradiente"
        android:stateListAnimator="@null" />

</LinearLayout>
